--- a/Challenge-1/ch-1.html
+++ b/Challenge-1/ch-1.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Links and Paragraph</title>
+  </head>
+  <body>
+    <a href="https://www.amazon.com" target="_blank">Back to Amazon</a>
+    <p>Nike Black Running Shoes</p>
+    <p>$39 - in stock.</p>
+    <p>Free delivery tomorrow.</p>
+    <button>Add to Cart</button>
+    <button>Buy now</button>
+  </body>
+</html>
