--- a/Challenge-2/ch-2-buttons.html
+++ b/Challenge-2/ch-2-buttons.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Buttons</title>
+    <link rel="stylesheet" href="ch-2-buttons.css" />
+  </head>
+  <body>
+    <button class="request-now">Request now</button>
+    <button class="add-to-cart">Add to Cart</button>
+    <button class="sign-up">Sign up</button>
+    <button class="get-started">Get started</button>
+    <button class="download">Download</button>
+    <button class="apply-on-company-website">Apply on company website</button>
+    <button class="save">Save</button>
+  </body>
+</html>
