--- a/Challenge-3/ch-3-small-website.html
+++ b/Challenge-3/ch-3-small-website.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Small Web Page</title>
+    <link rel="stylesheet" href="ch-3-small-website.css" />
+  </head>
+  <body>
+    <a href="https://www.amazon.com">Back to Amazon</a>
+    <p class="heading">Nike Black Running Shoes</p>
+    <p class="stock">$39 - in stock.</p>
+    <p class="delivery">Free delivery tomorrow.</p>
+    <button class="add-to-cart">Add to Cart</button>
+    <button class="buy-now">Buy now</button>
+  </body>
+</html>
