--- a/Challenge-5/ch-5a.html
+++ b/Challenge-5/ch-5a.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tahoma Font</title>
+    <style>
+      p {
+        font-family: Tahoma;
+        font-size: 25px;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <p>This is Tahoma Font</p>
+  </body>
+</html>
