--- a/Challlenge-7/ch-7c.html
+++ b/Challlenge-7/ch-7c.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rounded Image</title>
+    <title>Circle Image</title>
     <style>
       img {
-        width: 200px;
-        border-radius: 10px;
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
       }
     </style>
   </head>
