--- a/Challlenge-7/ch-7d.html
+++ b/Challlenge-7/ch-7d.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rounded Image</title>
+    <title>Search Bar</title>
     <style>
-      img {
+      .search-bar {
+        font-size: 22px;
+        padding: 8px 16px;
+        border-radius: 8px;
+        border: 1px solid gray;
         width: 200px;
-        border-radius: 10px;
       }
     </style>
   </head>
   <body>
-    <img src="cat.jpg" alt="A cat image" />
+    <input class="search-bar" type="text" placeholder="Search" />
   </body>
 </html>
