--- a/Challenge-8/ch-8a.html
+++ b/Challenge-8/ch-8a.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Text Boxes</title>
+    <style>
+      .name {
+        display: block;
+        margin-bottom: 5px;
+        font-size: 18px;
+      }
+      .email {
+        font-size: 18px;
+      }
+    </style>
+  </head>
+  <body>
+    <input class="name" type="text" placeholder="Name" />
+    <input class="email" type="email" placeholder="Email" />
+  </body>
+</html>
