--- a/Challenge-9/ch-9b.html
+++ b/Challenge-9/ch-9b.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Division Tag</title>
+    <title>Circle Div</title>
     <style>
       div {
         width: 100px;
         height: 100px;
-        background-color: red;
+        background-color: green;
+        border-radius: 100px;
       }
     </style>
   </head>
