--- a/Login-Form/form.html
+++ b/Login-Form/form.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="form.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Registration Form</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="form-items">
+        <h1>Login Form</h1>
+        <label for="">Name</label>
+        <input type="text" name="" id="" placeholder="Enter your name.." />
+        <label for="">Password</label>
+        <input
+          type="password"
+          name=""
+          id=""
+          placeholder="Enter your password.."
+        />
+        <label for="">Email</label>
+        <input type="email" name="" id="" placeholder="Enter your email.." />
+        <button class="submit">SUBMIT</button>
+      </div>
+    </div>
+  </body>
+</html>
